# mirrorly

./: .gitignore  .travis.yml  .uuid  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt  installDepsMacOS.sh  main.cpp  preLinux.sh  preMacOS.sh  preWindows.bat
cmake/: FindGStreamer.cmake
resources/: config.json
src/: ScreenMirror.cpp  ScreenMirror.h  main.cpp
